--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "debug": "^4.1.1",
+    "dotenv": "^14.3.2",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
